<resources>
    <string name="app_name">Walmart Login</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email_address_required">Email Address(Required)</string>
    <string name="password_required">Password(Required)</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_a_new_account">Create a new account</string>
</resources>