<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@drawable/img"
        android:id="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"
        />

    <TextView

        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_your_account"
        android:textSize="35sp"
        android:layout_marginStart="20dp"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"
        />
    <TextView
        android:id="@+id/tv2"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address_required"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        tools:ignore="TextViewEdits" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:focusable = "true"
        android:textColorHighlight = "#ff7eff15"
        android:textColorHint = "#ffff25e6"
        android:inputType="text"
        tools:ignore="Autofill" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"
        />
    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_required"
        android:textSize="20sp"
        android:layout_marginStart="20dp"

        />

    <EditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:inputType="textPassword"
        />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:text="@string/forgot_password"
        android:textSize="20sp"
        android:autoLink="all"
        android:clickable="true"
        android:onClick="getPassword"

        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"
        />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginStart="20dp"
        android:textSize="25sp"
        android:background="@color/buttonColor"
        android:onClick="login"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"
        />
    <TextView
        android:id="@+id/tv5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        />

    <Button
        android:id="@+id/et3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:layout_marginStart="20dp"
        android:background="@color/buttonColor"
        android:onClick="createAccount"

        />

</LinearLayout>
